syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "account.proto";
import "context.proto";
import "status.proto";

option csharp_namespace = "Mastodon.Grpc";

service StatusApi {
  rpc GetStatus (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      get: "/api/v1/statuses/{value}"
    };
  }
  
  rpc GetRebloggedBy (GetRebloggedByRequest) returns (Accounts)
  {
	option (google.api.http) = {
      get: "/api/v1/statuses/{statusId}/reblogged_by"
      response_body: "data"
    };
  }
  
  rpc GetFavouritedBy (GetFavouritedByRequest) returns (Accounts)
  {
	option (google.api.http) = {
      get: "/api/v1/statuses/{statusId}/favourited_by"
      response_body: "data"
    };
  }

  rpc GetContext (google.protobuf.StringValue) returns (Context)
  {
	option (google.api.http) = {
      get: "/api/v1/statuses/{value}/context"
    };
  }

  rpc Favourite (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{value}/favourite"
    };
  }
  
  rpc Unfavourite (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{value}/unfavourite"
    };
  }

  rpc Bookmark (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{value}/bookmark"
    };
  }
  
  rpc Unbookmark (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{value}/unbookmark"
    };
  }

  rpc Mute (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{value}/mute"
    };
  }
  
  rpc Unmute (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{value}/unmute"
    };
  }

  rpc Pin (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{value}/pin"
    };
  }
  
  rpc Unpin (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{value}/unpin"
    };
  }

  rpc Reblog (ReblogRequest) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{statusId}/reblog"
      body: "*"
    };
  }
  
  rpc Unreblog (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{value}/unreblog"
    };
  }
}

message GetRebloggedByRequest
{
    string statusId = 1;

    // Internal parameter. Use HTTP Link header for pagination.
    optional string max_id = 2;

    // Internal parameter. Use HTTP Link header for pagination.
    optional string since_id = 3;
    
    // Internal parameter. Use HTTP Link header for pagination.
    optional string min_id = 4;
    
    // Maximum number of results to return. Defaults to 40 accounts. Max 80 accounts.
    optional uint32 limit = 5; 
}

message GetFavouritedByRequest
{
    string statusId = 1;

    // Internal parameter. Use HTTP Link header for pagination.
    optional string max_id = 2;

    // Internal parameter. Use HTTP Link header for pagination.
    optional string since_id = 3;
    
    // Internal parameter. Use HTTP Link header for pagination.
    optional string min_id = 4;
    
    // Maximum number of results to return. Defaults to 40 accounts. Max 80 accounts.
    optional uint32 limit = 5; 
}

message ReblogRequest
{
    string statusId = 1;
    optional string visibility = 2;
}
